--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>Pilot Assistant</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
