--- a/public/history.html
+++ b/public/history.html
@@ -1,9 +1,33 @@
 <html>
     <head>
-        <title> Pilot History</title>
+        <title>Pilot History</title>
+        <link rel="stylesheet" href="styles.css"> 
         <script type = 'text/javascript' src = "history.js" defer></script>
     </head>
     <body>
-        <h1></h1>
+        <header>
+        <h1>Pilot History - Pilot Assistsant</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="functionality.html">Functionality</a></li>
+                <li><a href ="history.html">Pilot History</a></li>
+            </ul>
+        </nav>
+        </header>
+        <main>
+
+       
+        <section>
+
+        </section>
+        </main>
+
+
+        <footer>
+            <p>&copy; 2024 All Rights Reserved</p>
+        </footer>
     </body>
 </html>
+
