Added Advanced CSS animation (Screen Transition)

--- a/public/about.html
+++ b/public/about.html
@@ -53,6 +53,7 @@
           <p class="role">Web Designer</p>
         </div>
       </div>
+      <div class="page-overlay"></div>
   </main>
   <footer>
     <p>&copy; 2024 All Rights Reserved</p>
