--- a/public/history.html
+++ b/public/history.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-        <h1>Pilot History - Pilot Assistsant</h1>
+        <h1>Pilot History</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
