edited the nav bar in history.html & edited the code for the local host in history.js

--- a/public/history.html
+++ b/public/history.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="functionality.html">Functionality</a></li>
+                <li><a href="projectfunctionality.html">Functionality</a></li>
                 <li><a href ="history.html">Pilot History</a></li>
             </ul>
         </nav>
