--- a/public/projectfunctionality.html
+++ b/public/projectfunctionality.html
@@ -36,6 +36,20 @@
                     console.error("Error fetching data:", error);
                     alert("Failed to fetch weather information.");
                 });
+                fetch(`${host}/pilot`,{
+        method: 'POST',
+        body: JSON.stringify({
+            firstName: `${document.getElementById('firstName').value}`,
+            lastName: `${document.getElementById('lastName').value}`,
+            pilotCity: `${document.getElementById('cityInput').value}`,
+        }),
+        headers: {
+            'Content-Type':'application/json'
+    
+        }
+    })
+    .then((res) => res.json())
+
         }
 
         function displayWeatherInfo(data, firstName, lastName) {
