added the table headings.

--- a/public/history.html
+++ b/public/history.html
@@ -16,13 +16,19 @@
             </ul>
         </nav>
         </header>
-        <main>
-
-       
         <section>
+            <table id = 'pilotHistoryTable'>
+                <thead>
+                    <tr>
+                        <th>Pilot First Name</th>
+                        <th>Pilot Last Name</th>
+                        <th> City</th>
 
+                    </tr>
+                </thead>
+            </table>
         </section>
-        </main>
+        
 
 
         <footer>
