--- a/public/history.html
+++ b/public/history.html
@@ -26,6 +26,9 @@
 
                     </tr>
                 </thead>
+                <tbody>
+
+                </tbody>
             </table>
         </section>
         
