worked on code to display the data from the database & update the database with new user inputs.

--- a/public/history.html
+++ b/public/history.html
@@ -5,6 +5,7 @@
         <script type = 'text/javascript' src = "history.js" defer></script>
     </head>
     <body>
+        <div class="container">
         <header>
         <h1>Pilot History</h1>
         <nav>
@@ -16,8 +17,9 @@
             </ul>
         </nav>
         </header>
-        <section>
-            <table id = 'pilotHistoryTable'>
+        <main class="History">
+        <section id = "table-area">
+            <!-- <table id = 'pilotInfo'>
                 <thead>
                     <tr>
                         <th>Pilot First Name</th>
@@ -29,14 +31,17 @@
                 <tbody>
 
                 </tbody>
-            </table>
+            </table> -->
         </section>
+        </main>
+
         
 
 
         <footer>
             <p>&copy; 2024 All Rights Reserved</p>
         </footer>
+    </div>
     </body>
 </html>
 
