updated the host

--- a/public/projectfunctionality.html
+++ b/public/projectfunctionality.html
@@ -12,8 +12,8 @@
     
     <script defer>
 
-            // const host = window.location.origin;
-            const host = 'http://localhost:3000'
+            const host = window.location.origin;
+            // const host = 'http://localhost:3000'
             const apiKey = "12fb5ce75e7573300640a779e85a4f3a";
 
         function createPilot(event) {
